--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ li {
 .header { 
     grid-area: h;
     background-color: transparent;
+    border: 1px solid #FFFFFF;
+    border-radius: 6px;
+    text-align: right;
+    padding: 2px 5px 2px 5px;
 }
 .photo {
     grid-area: p;
