--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ li {
     font-size: 12px;
     letter-spacing: 1px;
     line-height: 16px;  
+    list-style: circle;
 }
 
 @media screen and (max-width: 480px) {
@@ -119,38 +120,10 @@ li {
     text-align: right;
     padding: 2px 5px 2px 5px;
 }
-.lang_panel {
-    display: flex;
-    justify-content: flex-end;
-    border: 1px solid #FFFFFF;
-    border-radius: 6px;
-}
-.lang_button {
-    border-radius: 6px;
-    border: 1px solid #FFFFFF;
-    padding: 2px 5px 2px 5px;
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    background-color: red;
-}
 .main_section {
     border-radius: 6px;
     border: 1px solid #FFFFFF;
     padding: 10px 10px 10px 25px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 5px;
-    background-color: rgba(0,0,128,0.5);
-}
-
-.connect_buttons {
-    display: flex;
-    justify-content: center;
-    border-radius: 6px;
-    border: 1px solid #FFFFFF;
-    padding: 3px 5px 10px 5px;
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 5px;
@@ -164,6 +137,7 @@ li {
     margin-right: 5px;
     margin-top: 5px;
     background-color: white;
+    list-style: none;
 }
 .side_section {
     border-radius: 6px;
