--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-image: url(images/bg_desktop-1680x1050.jpg);
+    background-color: lightslategray;
+    <!--background-image: url(images/bg_desktop-1680x1050.jpg);
     background-size: cover;
     background-attachment: fixed;
-    background-position: top right;
+    background-position: top right;-->
 }
-
 h1 {
     font-family: Arial;
     color: #ffffff;
@@ -20,13 +20,7 @@ h2 {
     letter-spacing: 1px;
     line-height: 22px;
 }
-h3 {
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 16px;
-    letter-spacing: 1px;
-    line-height: 20px;
-}
+
 h4 {
     font-family: Arial;
     color: #ffffff;
@@ -77,7 +71,6 @@ li {
         margin-right: 50px;
     }
 }
-
 .container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
