--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     background-color: lightslategray;
-    <!--background-image: url(images/bg_desktop-1680x1050.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: top right;-->
+    <!--background-image: url(images/bg_desktop-1680x1050.jpg);-->
+    <!--background-size: cover;-->
+    <!--background-attachment: fixed;-->
+    <!--background-position: top right;-->
 }
 h1 {
     font-family: Arial;
